.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:04:26 **** Incremental Build of configuration Release for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/Library/Frameworks/SDL2.framework/Versions/A/Headers -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp:6:10: fatal error: 'SDL.h' file not found
#include "SDL.h"
         ^~~~~~~
1 error generated.
make: *** [src/Main.o] Error 1
15:04:27 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building file: ../src/Screen.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Screen.d" -MT"src/Screen.o" -o "src/Screen.o" "../src/Screen.cpp"
Finished building: ../src/Screen.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:05:29 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
14:42:29 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
14:42:44 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
make: Nothing to be done for `all'.
14:44:34 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
14:46:25 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building file: ../src/Screen.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Screen.d" -MT"src/Screen.o" -o "src/Screen.o" "../src/Screen.cpp"
Finished building: ../src/Screen.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
14:47:59 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Screen.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Screen.d" -MT"src/Screen.o" -o "src/Screen.o" "../src/Screen.cpp"
Finished building: ../src/Screen.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
14:48:22 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Screen.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Screen.d" -MT"src/Screen.o" -o "src/Screen.o" "../src/Screen.cpp"
Finished building: ../src/Screen.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
14:49:04 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Screen.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Screen.d" -MT"src/Screen.o" -o "src/Screen.o" "../src/Screen.cpp"
../src/Screen.cpp:117:13: error: use of undeclared identifier 'x'
                        setPixel(x, y, red, green, blue);
                                 ^
1 error generated.
make: *** [src/Screen.o] Error 1
14:49:59 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Screen.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Screen.d" -MT"src/Screen.o" -o "src/Screen.o" "../src/Screen.cpp"
Finished building: ../src/Screen.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
14:52:11 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:02:48 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building file: ../src/Screen.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Screen.d" -MT"src/Screen.o" -o "src/Screen.o" "../src/Screen.cpp"
Finished building: ../src/Screen.cpp
 
Building file: ../src/Swarm.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Swarm.d" -MT"src/Swarm.o" -o "src/Swarm.o" "../src/Swarm.cpp"
Finished building: ../src/Swarm.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:04:03 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:04:19 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:05:01 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:08:26 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
